--- a/style.css
+++ b/style.css
@@ -5,7 +5,61 @@
 }
 
 body {
-    background-color: aliceblue;
+    font-family: 'Montserrat';
+    background-color: white;
+    text-align: center;
+}
+
+h1{
+    font-size: 32px;
+}
+
+h2{
+    font-size: 14px;
+}
+
+header {
+    background-color: #4C35E0;
+    color: white;
+    padding: 30px;
+}
+
+.exo1 {
+    background-color: #FEEDE6;
+    display: inline-block;
+    max-width: auto;
+    vertical-align: top;
+    padding: 30px 200px;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+
+ul {
+    list-style: none;
+    margin:10px 0;
+}
+
+button {
+    background-color: #4C35E0; 
+    border: none;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 0px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.content {
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .flex_random {
