--- a/style.css
+++ b/style.css
@@ -103,3 +103,9 @@ button:hover {
 iframe {
     margin: 30px 0;
 }
+
+.exo_title{
+    margin: 20px 0 0 0;
+    font-size: 24px;
+    font-weight: bold;
+}
